fixed new task button issue on mobile

--- a/src/components/GoalsPane.css
+++ b/src/components/GoalsPane.css
@@ -6,7 +6,8 @@
   top:0;
   left: -700px;
   width: 100%;
-  height: 100vh;
+  /* attempt to fix hidden button issue */
+  height: 105vh;
   background-color: #fff;
   padding: 50px 20px 40px 20px;
   border: 1px solid #dfdfdf;
