--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,9 @@ body {
   border: none;
   font-size: 18px;
 }
+
+@media (max-width: 768px) {
+  .main {
+    overflow-y: hidden;
+  }
+}
